<resources>
    <string name="app_name">Get Fit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="day">Day:</string>
    <string name="routine">Routine</string>
    <string name="enter_today_s_workout">Enter today\'s workout</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="set_workout">workout</string>
    <string name="_0">0</string>
    <string name="finish">Finish</string>
    <string name="schedule">Schedule</string>
    <string name="workout">Workout</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="sets">Sets</string>
    <string name="lbs">lbs</string>
    <string name="_back">Return</string>
    <string name="pic">Take Picture</string>
    <string name="_note">Notes</string>
    <string name="set_today_s_workout">Set today\'s workout</string>
    <string name="set_your_notes">Set your notes</string>
    <string name="today_s_note">Today\'s Note</string>
    <string name="save">Save</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="camera">Camera</string>
    <string name="sound_pool">Sound Pool</string>
    <string name="music_player">Music Player</string>
    <string name="no_workout_scheduled">No workout scheduled</string>
    <string name="url_image">URL IMAGE</string>
    <string name="network_url">Network URL</string>
</resources>
