<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project03.csc214.getfit.setting.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/today_s_note"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/set_today_s_workout"
        android:textSize="30sp"
        android:id="@+id/edit_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/set_your_notes"
        android:id="@+id/edit_note"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        android:gravity="top|start"
        android:maxLines="12"
        android:lines="12"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/save"
            android:id="@+id/setting_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="#008"
            android:textAllCaps="false"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>
