<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project03.csc214.getfit.HomeFragment"
    android:background="@drawable/logo"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/home_routine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routine"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_below="@+id/day_of_week"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/schedule"
            android:text="@string/schedule"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            style="@style/StartButton"
            android:textAllCaps="false"
            android:onClick="scheduleButtonPress"
            />

        <Button
            android:id="@+id/extras"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            style="@style/StartButton"
            android:text="Extras"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            style="@style/StartButton"
            android:text="@string/start"
            android:textAllCaps="false"
            android:onClick="startButtonPress"
            />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            style="@style/StartButton"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:onClick="settingButtonPress"
            />

    </LinearLayout>

</RelativeLayout>