<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="project03.csc214.getfit.workout.CreateRoutineFragment">

    <EditText
        android:id="@+id/routine_create"
        android:hint="@string/enter_today_s_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:text="@string/submit"
            android:id="@+id/creat_submit"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitButtonPress"/>
        <Button
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelButtonPress"/>
    </LinearLayout>

</LinearLayout>
